fix: 🐛 Input.Search height affected by suffix (#23527)
* :clapper: improve Input demo code

* style: fix Input.Search height stretched by suffix

close #23523

* fix react key warning

* :white_check_mark: fix demo snapshot

--- a/components/input/style/affix.less
+++ b/components/input/style/affix.less
@@ -7,6 +7,21 @@
   &-affix-wrapper {
     .input();
     display: inline-flex;
+    height: @input-height-base;
+    padding-top: 0;
+    padding-bottom: 0;
+
+    &-lg {
+      height: @input-height-lg;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    &-sm {
+      height: @input-height-sm;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
 
     &-disabled {
       .@{ant-prefix}-input[disabled] {
@@ -15,7 +30,8 @@
     }
 
     > input.@{ant-prefix}-input {
-      padding: 0;
+      padding-right: 0;
+      padding-left: 0;
       border: none;
       outline: none;
 
@@ -33,7 +49,9 @@
 
   &-prefix,
   &-suffix {
+    display: flex;
     flex: none;
+    align-items: center;
   }
 
   &-prefix {
